--- a/moovsmart/package.json
+++ b/moovsmart/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.9",
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@types/chart.js": "^2.9.7",
+    "@types/googlemaps": "^3.39.0",
     "angular-bootstrap-md": "^8.8.0",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
