--- a/moovsmart/package.json
+++ b/moovsmart/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "@cloudinary/angular-5.x": "^1.1.0",
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@types/chart.js": "^2.9.7",
     "@types/googlemaps": "^3.39.0",
@@ -26,8 +27,10 @@
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.5.0",
+    "cloudinary-core": "^2.8.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "ng2-file-upload": "^1.4.0",
     "rxjs": "~6.4.0",
     "screenfull": "^3.3.0",
     "tslib": "^1.10.0",
