--- a/moovsmart/package.json
+++ b/moovsmart/package.json
@@ -21,37 +21,37 @@
     "@angular/router": "~8.2.9",
     "@cloudinary/angular-5.x": "^1.1.0",
     "@fortawesome/fontawesome-free": "^5.12.0",
-    "@types/chart.js": "^2.9.7",
+    "@types/chart.js": "^2.9.8",
     "@types/googlemaps": "^3.39.0",
-    "angular-bootstrap-md": "^8.8.0",
+    "angular-bootstrap-md": "^8.8.1",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
-    "chart.js": "^2.5.0",
+    "chart.js": "^2.9.3",
     "cloudinary-core": "^2.8.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ng2-file-upload": "^1.4.0",
     "rxjs": "~6.4.0",
-    "screenfull": "^3.3.0",
+    "screenfull": "^3.3.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.8",
-    "@angular/cli": "~8.3.8",
+    "@angular-devkit/build-angular": "^0.803.21",
+    "@angular/cli": "^8.3.21",
     "@angular/compiler-cli": "~8.2.9",
     "@angular/language-service": "~8.2.9",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
+    "@types/node": "~8.9.4",
+    "codelyzer": "^5.2.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.5.1",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
