--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <version>1.0-SNAPSHOT</version>
     <name>moovsmart</name>
     <description>moovsmart</description>
+    <packaging>war</packaging>
 
     <properties>
         <java.version>11</java.version>
