--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -33,5 +33,8 @@ logging:
     com.progmasters: debug
     org.springframework.web: info
     org.hibernate: error
+    org:
+      springframework:
+        security: debug
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
