File logger save logs to file under resources directory in logger directory

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -39,3 +39,5 @@ logging:
         security: debug
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+  file:
+    name: src/main/resources/logger/moovsmart_logger.log
