--- a/moovsmart/package.json
+++ b/moovsmart/package.json
@@ -32,6 +32,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ng2-file-upload": "^1.4.0",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.4.0",
     "screenfull": "^3.3.3",
     "tslib": "^1.10.0",
