--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -20,6 +20,13 @@ spring:
       force: true
   security:
     admin:
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: moovsmartproject@gmail.com
+    properties.mail.smtp.starttls.enable: true
+    password: Moov2002
+    url: http://localhost:4200/#/
 
 logging:
   level:
