--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/moovsmart?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
     username: root
-    password: test1234
+    password: zoli2002
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
